# spectrusty

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Justfile  README.md  _config.yml  index.md  rustcwrap.rs
benches/: README.md  boot.rs  synth.rs  video.rs  video128.rs  video_plus.rs
examples/: README.md  audio_ay_cpal.rs  audio_tap_cpal.rs  ay_player_cpal.rs
examples/audio/: Cargo.toml  README.md
examples/sdl2-zxspectrum/: .gitignore  Cargo.toml  README.md  features.txt
examples/sdl2-zxspectrum/src/: emulator.rs  main.rs  spectrum.rs  utils.rs
examples/sdl2-zxspectrum/src/emulator/: interface1.rs  nonblocking.rs  printer.rs  serde.rs  snapshot.rs
examples/sdl2-zxspectrum/src/spectrum/: printer.rs
examples/sdl2-zxspectrum/src/spectrum/peripherals/: nonblocking.rs
examples/sdl2_zxspectrum/: Cargo.toml
examples/sdl2_zxspectrum/src/: audio.rs  main.rs  peripherals.rs  printer.rs  spectrum.rs  utils.rs
examples/sdl2_zxspectrum/src/spectrum/: audio.rs  peripherals.rs  printer.rs
examples/sdl2_zxspectrum/src/spectrum/peripherals/: nonblocking.rs
examples/web-ay/: Cargo.toml  Justfile  README.md  index.html  index.js  webpack.config.js
examples/web-ay-player/: .gitignore  Cargo.toml  Justfile  README.md  index.js  package.json  webpack.config.js
examples/web-ay-player/src/: lib.rs  player.rs
examples/web-ay/src/: lib.rs  player.rs
examples/web-zxspectrum/: .gitignore  Cargo.toml  Justfile  README.md  features.txt  index.html  index.js  webpack.config.js
examples/web-zxspectrum/.cargo/: config
examples/web-zxspectrum/src/: audio.rs  control.rs  index.html  lib.rs  utils.rs
examples/web-zxspectrum/src/js/: index.js  keyboard.js  spectrusty.js  urlparams.js  utils.js
examples/web-zxspectrum/src/rust/: audio.rs  control.rs  lib.rs  serde.rs  snapshot.rs  utils.rs
examples/web-zxspectrum/static/: spectrum.css  utils.js
examples/web_ay_player/: .gitignore  Cargo.toml  index.html  index.js  package.json
examples/web_ay_player/src/: lib.rs  player.rs
examples/zxspectrum-common/: Cargo.toml  README.md
examples/zxspectrum-common/src/: config.rs  devices.rs  lib.rs  models.rs  peripherals.rs  spectrum.rs  video.rs
resources/: .gitignore  README-copyright.md  README.md  read_tap_test.tap  spectrusty.tap
spectrusty-audio/: Cargo.toml  README.md
spectrusty-audio/src/: carousel.rs  host.rs  lib.rs  music.rs  synth.rs
spectrusty-audio/src/host/: cpal.rs  sdl2.rs
spectrusty-audio/src/synth/: ext.rs
spectrusty-core/: Cargo.toml  README.md
spectrusty-core/src/: audio.rs  bus.rs  chip.rs  clock.rs  lib.rs  memory.rs  video.rs
spectrusty-core/src/audio/: sample.rs
spectrusty-core/src/bus/: dynbus.rs
spectrusty-core/src/bus/dynbus/: serde.rs
spectrusty-core/src/chip/: flags.rs
spectrusty-core/src/clock/: ops.rs  packed.rs
spectrusty-core/src/memory/: arrays.rs  extension.rs  serde.rs
spectrusty-core/src/video/: pixel.rs
spectrusty-formats/: Cargo.toml  README.md
spectrusty-formats/src/: ay.rs  lib.rs  mdr.rs  scr.rs  sna.rs  snapshot.rs  tap.rs  tzx.rs  z80.rs
spectrusty-formats/src/tap/: pulse.rs  read.rs  write.rs
spectrusty-formats/src/tap/pulse/: decoding.rs  encoding.rs
spectrusty-formats/src/z80/: common.rs  compress.rs  decompress.rs  loader.rs  saver.rs
spectrusty-peripherals/: Cargo.toml  README.md
spectrusty-peripherals/src/: ay.rs  bus.rs  joystick.rs  lib.rs  memory.rs  mouse.rs  network.rs  parallel.rs  serial.rs  storage.rs  zxprinter.rs
spectrusty-peripherals/src/ay/: audio.rs  serial128.rs
spectrusty-peripherals/src/bus/: ay.rs  debug.rs  joystick.rs  mouse.rs  parallel.rs  zxinterface1.rs  zxprinter.rs
spectrusty-peripherals/src/bus/ay/: serde.rs  serial128.rs
spectrusty-peripherals/src/joystick/: cursor.rs  fuller.rs  kempston.rs  sinclair.rs
spectrusty-peripherals/src/memory/: zxinterface1.rs
spectrusty-peripherals/src/mouse/: kempston.rs
spectrusty-peripherals/src/network/: zxnet.rs  zxnet_udp.rs
spectrusty-peripherals/src/serial/: keypad.rs  rs232.rs
spectrusty-peripherals/src/storage/: microdrives.rs
spectrusty-peripherals/src/storage/microdrives/: serde.rs
spectrusty-utils/: Cargo.toml  README.md
spectrusty-utils/src/: io.rs  keyboard.rs  lib.rs  printer.rs  tap.rs
spectrusty-utils/src/keyboard/: minifb.rs  sdl2.rs  web_sys.rs  winit.rs
spectrusty-utils/src/printer/: epson_gfx.rs  image_spooler.rs
spectrusty-utils/src/tap/: romload.rs
spectrusty_audio/: Cargo.toml
spectrusty_core/: Cargo.toml
spectrusty_core/src/: audio.rs  bus.rs  chip.rs  clock.rs  lib.rs  memory.rs  video.rs
spectrusty_core/src/audio/: sample.rs
spectrusty_core/src/bus/: dynbus.rs
spectrusty_core/src/bus/dynbus/: serde.rs
spectrusty_core/src/chip/: flags.rs
spectrusty_core/src/memory/: extension.rs  serde.rs
spectrusty_core/src/video/: color.rs  pixel.rs  pixel_buffer.rs
spectrusty_formats/: Cargo.toml
spectrusty_formats/src/: lib.rs  mdr.rs  sna.rs  snapshot.rs  tap.rs  z80.rs
spectrusty_formats/src/tap/: pulse.rs  read.rs  write.rs
spectrusty_formats/src/tap/pulse/: decoding.rs  encoding.rs
spectrusty_formats/src/z80/: common.rs  compress.rs  decompress.rs  loader.rs  saver.rs
spectrusty_peripherals/: Cargo.toml
spectrusty_peripherals/src/: ay.rs  joystick.rs  keyboard.rs  lib.rs  mouse.rs  serial.rs
spectrusty_peripherals/src/ay/: audio.rs  serial128.rs
spectrusty_peripherals/src/bus/: ay.rs  debug.rs  joystick.rs  mouse.rs  zxinterface1.rs  zxprinter.rs
spectrusty_peripherals/src/bus/ay/: serde.rs  serial128.rs
spectrusty_peripherals/src/memory/: zxinterface1.rs
spectrusty_peripherals/src/network/: zxnet.rs  zxnet_udp.rs
spectrusty_peripherals/src/serial/: keypad.rs
spectrusty_peripherals/src/storage/: microdrives.rs
spectrusty_utils/: Cargo.toml
spectrusty_utils/src/: keyboard.rs  lib.rs  tap.rs
spectrusty_utils/src/keyboard/: minifb.rs  sdl2.rs  web_sys.rs  winit.rs
src/: audio.rs  bus.rs  chip.rs  clock.rs  cpu_debug.rs  io.rs  lib.rs  memory.rs  peripherals.rs  video.rs
tests/: audio_cpal.rs  test_boot_spectrum.rs  test_fuse.rs  (+1 more)
(+144 files in other folders)
