[package]
name = "spectrusty"
version = "0.1.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
categories = ["emulators"]
keywords = ["8-bit", "ay-3-8910", "zx-spectrum", "retro"]
repository = "https://github.com/royaltm/spectrusty"
homepage = "https://royaltm.github.io/spectrusty/"
readme = "README.md"
license = "LGPL-3.0-or-later"
include = ["/src/", "/COPYING", "/COPYING.LESSER", "/CHANGELOG.md", "/README.md"]
description = """
SPECTRUSTY is a library for building highly customizable emulators \
of the ZX Spectrum computer series and clones.
"""

[package.metadata.docs.rs]
all-features = true
# targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[features]
default = ["formats", "peripherals", "snapshot", "compression"]
sdl2 = ["spectrusty-audio/sdl2"]
cpal = ["spectrusty-audio/cpal"]
compression = ["spectrusty-core/compression"]
snapshot = ["serde", "arrayvec/serde", "spectrusty-core/snapshot", "spectrusty-peripherals/snapshot"]
audio = ["spectrusty-audio"]
formats = ["spectrusty-formats"]
peripherals = ["spectrusty-peripherals"]

[dependencies]
log = "0.4"
arrayvec = "0.5.1"
bitflags = "1.2.1"

[dependencies.spectrusty-core]
version = "0.1"
default-features = false
path = "spectrusty-core"

[dependencies.spectrusty-audio]
version = "0.1"
optional = true
path = "spectrusty-audio"

[dependencies.spectrusty-formats]
version = "0.1"
optional = true
path = "spectrusty-formats"

[dependencies.spectrusty-peripherals]
version = "0.1"
default-features = false
optional = true
path = "spectrusty-peripherals"

[dependencies.serde]
version = "1.0"
default-features = true
features = ["derive"]
optional = true

[dev-dependencies]
smallvec = "1.1.0"
serde_json = "1.0"
bincode = "1.2"
rand = {version = "0.7", features = ["small_rng"]}
reqwest = { version = "0.10", features = ["blocking"] }

[workspace]
members = [
  "spectrusty-audio",
  "spectrusty-core",
  "spectrusty-formats",
  "spectrusty-peripherals",
  "spectrusty-utils",
  "examples/audio",
  "examples/sdl2-zxspectrum",
  "examples/web-ay-player",
  "examples/web-zxspectrum",
  "examples/zxspectrum-common",
]

default-members = [
  "spectrusty-core",
  "spectrusty-audio",
  "spectrusty-formats",
  "spectrusty-peripherals",
  "spectrusty-utils",
  "."
]

[profile.release]
# lto = true
# panic = 'abort'
# opt-level = 's'
