[package]
name = "spectrusty"
version = "0.4.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2021"
categories = ["emulators"]
keywords = ["8-bit", "ay-3-8910", "zx-spectrum", "retro"]
repository = "https://github.com/royaltm/spectrusty"
homepage = "https://royaltm.github.io/spectrusty/"
readme = "README.md"
license = "LGPL-3.0-or-later"
include = ["/src/", "/COPYING", "/COPYING.LESSER", "/CHANGELOG.md", "/README.md"]
description = """
SPECTRUSTY is a library for building highly customizable emulators \
of the ZX Spectrum computer series and clones.
"""

[package.metadata.docs.rs]
all-features = true
# targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[features]
default = ["formats", "peripherals", "snapshot", "compression"]
sdl2 = ["spectrusty-audio/sdl2"]
cpal = ["spectrusty-audio/cpal"]
compression = ["spectrusty-core/compression"]
snapshot = ["serde", "spectrusty-core/snapshot", "spectrusty-peripherals/snapshot"]
audio = ["spectrusty-audio"]
formats = ["spectrusty-formats"]
peripherals = ["spectrusty-peripherals"]
boxed_frame_cache = []

[dependencies]
log = "0.4"
bitflags = "1.3.2"

[dependencies.spectrusty-core]
version = "0.4.0"
default-features = false
path = "spectrusty-core"

[dependencies.spectrusty-audio]
version = "0.4.0"
optional = true
path = "spectrusty-audio"

[dependencies.spectrusty-formats]
version = "0.4.0"
optional = true
path = "spectrusty-formats"

[dependencies.spectrusty-peripherals]
version = "0.4.0"
default-features = false
optional = true
path = "spectrusty-peripherals"

[dependencies.serde]
version = "1.0"
default-features = true
features = ["derive"]
optional = true

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3"
rand = {version = "0.8", features = ["small_rng"]}
reqwest = { version = "0.11", features = ["blocking"] }

[workspace]
members = [
  "spectrusty-audio",
  "spectrusty-core",
  "spectrusty-formats",
  "spectrusty-peripherals",
  "spectrusty-utils",
  "examples/audio",
  "examples/sdl2-zxspectrum",
  "examples/web-ay-player",
  "examples/web-zxspectrum",
  "examples/zxspectrum-common",
]

default-members = [
  "spectrusty-core",
  "spectrusty-audio",
  "spectrusty-formats",
  "spectrusty-peripherals",
  "spectrusty-utils",
  "."
]

[profile.release]
# lto = true
# panic = 'abort'
# opt-level = 's'
