[package]
name = "spectrusty-audio"
version = "0.1.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
log = "0.4"

[dependencies.spectrusty-core]
version = "0.1"
path = "../spectrusty-core"

[dependencies.sdl2]
version = "0.34"
optional = true

[dependencies.cpal]
# version = "0.12"
git = "https://github.com/RustAudio/cpal.git"
optional = true
