[package]
name = "spectrusty-audio"
version = "0.2.1"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
repository = "https://github.com/royaltm/spectrusty"
homepage = "https://royaltm.github.io/spectrusty/"
readme = "README.md"
license = "LGPL-3.0-or-later"
description = """
Components of the SPECTRUSTY library for synthesizing audio samples and native audio playback.
"""

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
log = "0.4"

[dependencies.spectrusty-core]
version = "0.2.1"
path = "../spectrusty-core"

[dependencies.sdl2]
version = "0.34"
optional = true

[dependencies.cpal]
version = "0.13.1"
optional = true
