[package]
name = "spectrusty-core"
version = "0.2.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
repository = "https://github.com/royaltm/spectrusty"
homepage = "https://royaltm.github.io/spectrusty/"
readme = "README.md"
license = "LGPL-3.0-or-later"
description = """
Core components of the SPECTRUSTY library.
"""

[features]
default = ["snapshot", "compression"]
snapshot = ["serde", "z80emu/serde", "base64"]

[dependencies]
bitflags = "1.2.1"

[dependencies.base64]
version = "0.12"
optional = true

[dependencies.z80emu]
version = "0.6"
default-features = false
features = ["std"]
# path = "../../z80emu"

[dependencies.serde]
version = "1.0"
default-features = true
features = ["derive"]
optional = true

[dependencies.compression]
version = "0.1.5"
default-features = false
features = ["std", "gzip"]
optional = true
