[package]
name = "spectrusty-formats"
version = "0.1.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
repository = "https://github.com/royaltm/spectrusty"
homepage = "https://royaltm.github.io/spectrusty/"
readme = "README.md"
license = "LGPL-3.0-or-later"
description = """
File format parsers and related utilities for the SPECTRUSTY library.
"""

[dependencies]
log = "0.4"
nom = "5.1"
memchr = "2.3"
bitflags = "1.2.1"

[dependencies.spectrusty-core]
version = "0.1"
path = "../spectrusty-core"

[dependencies.spectrusty-peripherals]
version = "0.1"
path = "../spectrusty-peripherals"

[dev-dependencies]
smallvec = "1.1"
rand = "0.7"
# spectrusty = { path = "..", version = "0.1" }
