[package]
name = "spectrusty-formats"
version = "0.4.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
repository = "https://github.com/royaltm/spectrusty"
homepage = "https://royaltm.github.io/spectrusty/"
readme = "README.md"
license = "LGPL-3.0-or-later"
description = """
File format parsers and related utilities for the SPECTRUSTY library.
"""

[dependencies]
log = "0.4"
nom = "7"
memchr = "2.5"
bitflags = "1.3.2"

[dependencies.spectrusty-core]
version = "0.4.0"
path = "../spectrusty-core"

[dependencies.spectrusty-peripherals]
version = "0.4.0"
path = "../spectrusty-peripherals"

[dev-dependencies]
smallvec = "1.11"
rand = "0.8"
spectrusty = { version = ">=0.3", path = ".." }
