[package]
name = "spectrusty-peripherals"
version = "0.1.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
repository = "https://github.com/royaltm/spectrusty"
homepage = "https://royaltm.github.io/spectrusty/"
readme = "README.md"
license = "LGPL-3.0-or-later"

[features]
default = ["snapshot"]
snapshot = ["serde", "spectrusty-core/snapshot", "base64"]

[dependencies]
log = "0.4"
bitflags = "1.2.1"
bitvec = "0.17.3"

[dependencies.rand]
version = "0.7"
features = ["small_rng"]

[dependencies.base64]
version = "0.12"
optional = true

[dependencies.serde]
version = "1.0"
default-features = true
features = ["derive"]
optional = true

[dependencies.spectrusty-core]
version = "0.1"
default-features = false
path = "../spectrusty-core"

[dev-dependencies]
spectrusty = { path = "..", version = "0.1" }
spectrusty-audio = { path = "../spectrusty-audio", version = "0.1" }
