[package]
name = "spectrusty-peripherals"
version = "0.3.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
repository = "https://github.com/royaltm/spectrusty"
homepage = "https://royaltm.github.io/spectrusty/"
readme = "README.md"
license = "LGPL-3.0-or-later"
description = """
Emulators of various peripheral devices for the SPECTRUSTY library.
"""

[features]
default = ["snapshot"]
snapshot = ["serde", "spectrusty-core/snapshot", "base64"]

[dependencies]
log = "0.4"
bitflags = "1.3.2"
bitvec = "1.0"

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.base64]
version = "0.20"
optional = true

[dependencies.serde]
version = "1.0"
default-features = true
features = ["derive"]
optional = true

[dependencies.spectrusty-core]
version = "0.3.0"
default-features = false
path = "../spectrusty-core"

[dev-dependencies]
serde_json = "1.0"
spectrusty-core = { path = "../spectrusty-core", version = "0.3.0" }
spectrusty-audio = { path = "../spectrusty-audio", version = "0.3.0" }
