[package]
name = "spectrusty-utils"
version = "0.1.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]

[dependencies.spectrusty-formats]
version = "0.1"
path = "../spectrusty-formats"

[dependencies.spectrusty-peripherals]
version = "0.1"
path = "../spectrusty-peripherals"

[dependencies.spectrusty]
version = "0.1"
path = ".."

[dependencies.minifb]
version = "0.16"
optional = true

[dependencies.sdl2]
version = "0.34"
optional = true

[dependencies.winit]
version = "0.22"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  'KeyboardEvent'
]
