[package]
name = "spectrusty-utils"
version = "0.1.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
repository = "https://github.com/royaltm/spectrusty"
homepage = "https://royaltm.github.io/spectrusty/"
readme = "README.md"
license = "LGPL-3.0-or-later"

[features]
default = ["snapshot", "compression"]
snapshot = ["serde", "spectrusty/snapshot"]
compression = ["spectrusty/compression"]

[dependencies]
log = "0.4"

[dependencies.serde]
version = "1.0"
default-features = true
features = ["derive"]
optional = true

[dependencies.spectrusty]
version = "0.1"
default-features = false
features = ["formats", "peripherals"]
path = ".."

[dependencies.minifb]
version = "0.16"
optional = true

[dependencies.sdl2]
version = "0.34"
optional = true

[dependencies.winit]
version = "0.22"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  'KeyboardEvent'
]
