[package]
name = "spectrusty_core"
version = "0.1.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"

[features]
default = ["snapshot", "compression"]
snapshot = ["serde", "z80emu/serde", "base64"]

[dependencies.serde]
default-features = true
features = ["derive"]
optional = true
version = "1.0"

[dependencies.z80emu]
default-features = false
features = ["std"]
version = "0.3.0"

[dependencies.compression]
default-features = false
optional = true
features = ["std", "gzip"]
version = "0.1.5"

[dependencies]
base64 = { version = "0.12", optional = true }
bitflags = "1.2.1"
