[package]
name = "spectrusty_formats"
version = "0.1.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"

[dependencies]
spectrusty_core = { path = "../spectrusty_core", version = "0.1" }
spectrusty_peripherals = { path = "../spectrusty_peripherals", version = "0.1" }
log = "0.4"
nom = "5.1"
memchr = "2.3"
bitflags = "1.2.1"

[dev-dependencies]
spectrusty = { path = "..", version = "0.1" }
smallvec = "1.1"
rand = "0.7"
