[package]
name = "spectrusty_utils"
version = "0.1.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
spectrusty_formats = { path = "../spectrusty_formats", version = "0.1" }
spectrusty_peripherals = { path = "../spectrusty_peripherals", version = "0.1" }

[dependencies.minifb]
version = "0.16"
optional = true

[dependencies.sdl2]
version = "0.33"
optional = true

[dependencies.winit]
version = "0.22"
optional = true
