[package]
name = "audio"
version = "0.2.1"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
workspace = "../.."
license = "GPL-3.0-or-later"
publish = false
description = """
Example programs demonstrating how to implement audio functions provided
by the SPECTRUSTY library using native bindings via the CPAL library.
"""

[dependencies]
cpal = "0.13.1"
hound = "3.4"
log = "0.4"
simple_logger = "1.11"

[dependencies.spectrusty]
version = "*"
features = ["audio", "cpal"]
path = "../.."
