[package]
name = "audio"
version = "0.3.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
workspace = "../.."
license = "GPL-3.0-or-later"
publish = false
description = """
Example programs demonstrating how to implement audio functions provided
by the SPECTRUSTY library using native bindings via the CPAL library.
"""

[dependencies]
cpal = "0.14.1"
hound = "3.5"
log = "0.4"
simple_logger = "3"

[dependencies.spectrusty]
version = "*"
features = ["audio", "cpal"]
path = "../.."
