[package]
name = "sdl2-zxspectrum"
version = "0.3.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
workspace = "../.."
license = "GPL-3.0-or-later"
publish = false
description = """
An example of a complete ZX Spectrum emulator with native bindings via SDL2 library.
"""

[features]
default = ["bundled"]
bundled = ["sdl2/bundled"]
static-link = ["sdl2/static-link"]

[dependencies]
clap = "2.33"
rand = "0.8"
sdl2 = "0.34.1"
# sdl2-sys = "0.34.0"
log = "0.4"
image = "0.23.0"
chrono = "0.4"
env_logger = "0.8"
arrayvec = "0.5.1"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"

[dependencies.spectrusty]
version = "*"
features = ["audio", "sdl2", "boxed_frame_cache"]
path = "../.."

[dependencies.spectrusty-utils]
version = "*"
features = ["sdl2"]
path = "../../spectrusty-utils"

[dependencies.zxspectrum-common]
version = "*"
path = "../zxspectrum-common"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winuser", "winerror", "shellscalingapi"]
