[package]
name = "sdl2-zxspectrum"
version = "0.4.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
workspace = "../.."
license = "GPL-3.0-or-later"
publish = false
description = """
An example of a complete ZX Spectrum emulator with native bindings via SDL2 library.
"""

[features]
default = ["bundled", "compact"]
bundled = ["sdl2/bundled"]
static-link = ["sdl2/static-link"]
use-pkgconfig = ["sdl2/use-pkgconfig"]
compact = ["boxed_frame_cache", "boxed_devices", "universal_dev_ts"]
boxed_frame_cache = ["spectrusty/boxed_frame_cache"]
boxed_devices = ["zxspectrum-common/boxed_devices"]
universal_dev_ts = ["zxspectrum-common/universal_dev_ts"]

[dependencies]
clap = "2.34"
rand = "0.8"
sdl2 = "0.35.2"
# sdl2-sys = "0.35.2"
log = "0.4"
image = "0.23.14"
chrono = "0.4"
env_logger = "0.9"
arrayvec = "0.7.4"
serde = "1.0"
serde_json = "1.0"
# serde_yaml = "0.9"

[dependencies.spectrusty]
version = "*"
features = ["audio", "sdl2"]
path = "../.."

[dependencies.spectrusty-utils]
version = "*"
features = ["sdl2"]
path = "../../spectrusty-utils"

[dependencies.zxspectrum-common]
version = "*"
default-features = false
path = "../zxspectrum-common"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winuser", "winerror", "shellscalingapi"]
