[package]
name = "web-ay-player"
version = "0.4.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
workspace = "../.."
license = "GPL-3.0-or-later"
publish = false
description = """
ZX Spectrum AY file format audio player example as a Web application.
"""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = "1.0"
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2" }

[dependencies.web-sys]
version = "0.3"
features = [
  'AudioBuffer',
  'AudioBufferSourceNode',
  'AudioContext',
  'AudioContextState',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'Blob',
  'File',
  'ProgressEvent',
  'Event',
  'EventTarget',
  'FileReader',
  'GainNode',
  'Response',
  'Window'
]

[dependencies.spectrusty]
version = "*"
path = "../.."
features = ["audio"]
