[package]
name = "web-zxspectrum"
version = "0.2.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
workspace = "../.."
license = "GPL-3.0-or-later"
publish = false
description = """
An example of a complete ZX Spectrum emulator with a Web UI aware of both desktop and mobile.
"""

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
console_log = { version = "0.2", optional = true }

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [
  'AudioBuffer',
  'AudioBufferSourceNode',
  'AudioContext',
  'AudioContextState',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'ImageData',
  'KeyboardEvent',
  'Event',
  'EventTarget',
  'GainNode',
  'Performance',
  'Window',
]

[dependencies.rand]
version = "^0.7"
features = ["wasm-bindgen"]

[dependencies.spectrusty]
version = "*"
path = "../.."
features = ["audio"]

[dependencies.spectrusty-utils]
version = "*"
path = "../../spectrusty-utils"
features = ["web-sys"]

[dependencies.zxspectrum-common]
version = "*"
path = "../zxspectrum-common"

[dev-dependencies]
wasm-bindgen-test = "0.3"
