[package]
name = "web_ay_player"
version = "0.1.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
workspace = "../.."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "0.2.59", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.9"
js-sys = "0.3.36"
serde = "1.0"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.36"
features = [
  'AudioBuffer',
  'AudioBufferSourceNode',
  'AudioContext',
  'AudioContextState',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'Blob',
  'File',
  'ProgressEvent',
  'Event',
  'EventTarget',
  'FileReader',
  'GainNode',
  'Response',
  'Window'
]

# [dependencies.rand]
# version = "^0.7"
# features = ["wasm-bindgen"]

[dependencies.spectrusty]
version = "*"
path = "../.."
features = ["audio"]
