[package]
name = "zxspectrum-common"
version = "0.2.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
workspace = "../.."
license = "GPL-3.0-or-later"
publish = false
description = """
An example ZX Spectrum emulator library that organizes concrete models and device interfaces. 
This library provides a very opinionated, high-level API on top of SPECTRUSTY.
"""

[dependencies]
log = "0.4"
fnv = "1.0"

[dependencies.rand]
version = "0.7"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = true
features = ["derive"]

[dependencies.spectrusty]
version = "*"
features = ["audio", "snapshot"]
path = "../.."

[dependencies.spectrusty-utils]
version = "*"
path = "../../spectrusty-utils"
